Added subscription Swagger documentation
