# storage/api-docs/api-docs.json
@@ -1,11 +1,172 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Zemfyra API",
+        "title": "CookCraft API",
         "version": "1.0.0"
     },
     "paths": {
         "/api/": {},
+        "/api/subscription": {
+            "post": {
+                "tags": [
+                    "Subscription"
+                ],
+                "summary": "Create a subscription",
+                "operationId": "91810adb9f86dda3d9546da5465cf11d",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "planId",
+                                    "paymentMethod"
+                                ],
+                                "properties": {
+                                    "planId": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "paymentMethod": {
+                                        "type": "string",
+                                        "example": "PayPal"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Subscription created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Subscription created successfully"
+                                        },
+                                        "data": {
+                                            "properties": {
+                                                "provider_name": {
+                                                    "type": "string",
+                                                    "example": "PayPal"
+                                                },
+                                                "provider_subscription_id": {
+                                                    "type": "string",
+                                                    "example": "I-A58GRKHDW6Y4"
+                                                },
+                                                "approval_url": {
+                                                    "type": "string",
+                                                    "example": "https://www.sandbox.paypal.com/webapps/billing/subscriptions?ba_token=BA-7PH45808R52040445"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Failed to create subscription - Already active subscription",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "You already have an active subscription!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/subscription/cancel": {
+            "post": {
+                "tags": [
+                    "Subscription"
+                ],
+                "summary": "Cancel a subscription",
+                "operationId": "1978bf53986c3ecdad8d43bbbd53fc3f",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "paymentMethod",
+                                    "reason"
+                                ],
+                                "properties": {
+                                    "paymentMethod": {
+                                        "type": "string",
+                                        "example": "PayPal"
+                                    },
+                                    "reason": {
+                                        "type": "string",
+                                        "example": "I want cancel membership!"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Subscription successfully canceled!",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Subscription successfully canceled!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Cancellation failed - Subscription already canceled",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Your subscription already has been canceled!"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/auth/register": {
             "post": {
                 "tags": [
